# mnemonic-gen

./: .editorconfig  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yaml
config/api/: deepseek_reasoner.json  default_backend.json  default_backend_batch.json  default_generation.json  hf.json  openai.json  openai_sft.json
config/train/: dpo.yaml  openai_sft.json
prompts/: placeholders.json
prompts/classify/: classify_system.txt
prompts/judge/: system.txt
prompts/reason/: system.txt  system_100_shot.txt  system_10_shot.txt  system_184_shot.txt  system_plan.txt  user.txt
prompts/train/: system.txt  user.txt
scripts/: _finetune_openai.py  setup-dev.sh  train.py  update-deps.sh
src/: __init__.py  constants.py  settings.py
src/data_gen/: analyze.py  generate.py  models.py  prompt_makers.py  reasoner.py
src/data_prep/: __init__.py  data_converters.py  data_hf.py  data_io.py  data_samplers.py  data_test_processors.py  data_validators.py  dedup.py
src/eval/: __init__.py  judge_llm.py  plot_llm.py  plot_prompt.py  significance.py
src/train/: reward_functions.py
src/train/openai/: __init__.py  mnemonic_ft.py  mnemonic_schemas.py  openai_ft.py  openai_utils.py
src/utils/: __init__.py  common.py  error_handlers.py  hf_utils.py  types.py
